[package]
name = "basin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.62"
aws-config = "0.53.0"
aws-sdk-glue = "0.23.0"
aws-sdk-s3 = "0.23.0"
aws-sdk-sqs = "0.24.0"
axum = { version = "0.6.2" }
config = "0.13.1"
redis = { version = "0.22.3", features = ["aio", "tokio-comp"] }
regex = "1"
reqwest = { version = "0.11.14", features = ["json", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
shell-escape = "0.1.5"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
